# money-tiger-email-classifier

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
email_classifier/: parser_factory.py  structs.py
email_classifier/parsers/: base.py  wolt.py
tests/: test_wolt.py
tests/inputs/: wolt.email
