[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "money_tiger_email_classifier"
version = "0.0.1"
description = "Classifies reciept emails into what reciept they are of"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["email"]
license = {text = "All rights reserved"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "beautifulsoup4==4.11.1",
]


[project.optional-dependencies]
tests = [
]

[tool.hatch.build.targets.wheel]
packages = ["email_classifier"]
